# customer-support-ai-agent

./: .env  README.md  pyproject.toml
app/: indexer.py  server.py
app/data/: customer-support.csv
